--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
-contourpy==1.3.2
+contourpy
 curl_cffi==0.10.0
 cycler==0.12.1
 deprecation==2.1.0
