--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ GitPython==3.1.44
 idna==3.10
 importlib_metadata==7.1.0
 ipykernel==6.29.4
-ipython==8.24.0
+ipython
 jedi==0.19.1
 Jinja2==3.1.6
 joblib==1.5.0
