--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
-kiwisolver==1.4.8
+kiwisolver
 MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
