--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ jupyter_client==8.6.1
 jupyter_core==5.7.2
 kiwisolver
 MarkupSafe==3.0.2
-matplotlib==3.10.3
+matplotlib
 matplotlib-inline==0.1.7
 msgpack==1.0.3
 multidict==6.4.3
