--- a/requirements.txt
+++ b/requirements.txt
@@ -71,7 +71,7 @@ referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
 scikit-learn==1.6.1
-scipy==1.15.3
+scipy
 six==1.16.0
 smmap==5.0.2
 soupsieve==2.7
